# api-automation-agent

./: .coveragerc  .gitignore  README.md  a.json  example.env  main.py  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: tests.yml
api-framework-template/: package.json  tsconfig.json
api-framework-template/src/base/: ApiClient.ts  (+1 more)
benchmarks/: README.md  benchmark_runner.py
benchmarks/test_coverage/: coverage_benchmark.py
docs/: follow_up_tasks.md
prompts/: create-additional-tests.txt  create-dot-env.txt  create-first-test-postman.txt  create-first-test.txt  create-models.txt
src/: container.py  framework_generator.py  test_controller.py
src/adapters/: config_adapter.py  processors_adapter.py
src/ai_tools/: file_creation_tool.py  file_reading_tool.py
src/configuration/: config.py  data_sources.py  models.py
src/models/: __init__.py  api_base.py  api_def.py  api_definition.py  api_model.py  api_path.py  api_verb.py  generated_model.py  model_info.py  usage_data.py
src/processors/: api_processor.py  postman_processor.py  swagger_processor.py
src/services/: command_service.py  file_service.py  llm_service.py
src/utils/: checkpoint.py  logger.py
src/visuals/: loading_animator.py
swagger_processor/: Cargo.toml  README.md  pyproject.toml
swagger_processor/.cargo/: config.toml
swagger_processor/src/: lib.rs  logger.rs  processor.rs  types.rs  utils.rs
tests/: test_command_service.py
tests/configuration/: test_data_sources.py
tests/fixtures/: conftest.py
tests/processors/: test_swagger_split_merge.py
tests/services/: test_command_service.py
tests/unit/: test_file_service.py
(+32 files in other folders)
