[package]
name = "swagger_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swagger_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["auto-initialize"
    ,"extension-module"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
rayon = "1.7"
once_cell = "1.21.3"
dashmap = "7.0.0-rc2"
num_cpus = "1.16.0"

[dev-dependencies]
tempfile = "3.20.0"
mockito = "1.2"

[profile.release]
lto = "fat"              # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Smaller binary, faster runtime
opt-level = 3            # Maximum optimization
debug = false            # No debug info
overflow-checks = false  # Skip overflow checks
